--- a/backend/web/statics/css/fesadmin.css
+++ b/backend/web/statics/css/fesadmin.css
@@ -801,6 +801,13 @@ legend {
 	-moz-border-radius: 0 0 3px 3px;
 	border-radius: 0 0 3px 3px
 }
+.row {
+	margin: 0 -10px
+}
+
+.row>[class*=col-] {
+	padding: 0 10px
+}
 /* 表格 */
 .table-bordered>thead>tr>th,
 .table-bordered>thead>tr>td {
@@ -1429,6 +1436,382 @@ legend {
 	text-overflow: ellipsis !important
 }
 
+/* 辅助类 */
+.no-rounded-corner {
+	-webkit-border-radius: 0 !important;
+	-moz-border-radius: 0 !important;
+	border-radius: 0 !important
+}
+
+.rounded-corner {
+	-webkit-border-radius: 50% !important;
+	-moz-border-radius: 50% !important;
+	border-radius: 50% !important
+}
+
+.no-border {
+	border: 0 !important
+}
+
+.border-top-1 {
+	border-top: 1px solid #eee !important
+}
+
+.border-right-1 {
+	border-right: 1px solid #eee !important
+}
+
+.border-bottom-1 {
+	border-bottom: 1px solid #eee !important
+}
+
+.border-left-1 {
+	border-left: 1px solid #eee !important
+}
+
+.no-box-shadow {
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important
+}
+
+.text-inverse {
+	color: #2d353c !important
+}
+
+a.text-inverse:focus,
+a.text-inverse:hover {
+	color: #575d63 !important
+}
+
+.text-success {
+	color: #00acac !important
+}
+
+a.text-success:focus,
+a.text-success:hover {
+	color: #33bdbd !important
+}
+
+.text-info {
+	color: #49b6d6 !important
+}
+
+a.text-info:focus,
+a.text-info:hover {
+	color: #6dc5de !important
+}
+
+.text-primary {
+	color: #348fe2 !important
+}
+
+a.text-primary:focus,
+a.text-primary:hover {
+	color: #5da5e8 !important
+}
+
+.text-warning {
+	color: #f59c1a !important
+}
+
+a.text-warning:focus,
+a.text-warning:hover {
+	color: #f7b048 !important
+}
+
+.text-danger {
+	color: #ff5b57 !important
+}
+
+a.text-danger:focus,
+a.text-danger:hover {
+	color: #ff7c79 !important
+}
+
+.text-white {
+	color: #fff !important
+}
+
+a.text-white:focus,
+a.text-white:hover {
+	color: #f0f3f4 !important
+}
+
+.bg-white {
+	background: #fff !important
+}
+
+.bg-silver-lighter {
+	background: #f4f6f7 !important
+}
+
+.bg-silver {
+	background: #f0f3f4 !important
+}
+
+.bg-silver-darker {
+	background: #b4b6b7 !important
+}
+
+.bg-black {
+	background: #2d353c !important
+}
+
+.bg-black-darker {
+	background: #242a30 !important
+}
+
+.bg-black-lighter {
+	background: #575d63 !important
+}
+
+.bg-grey {
+	background: #b6c2c9 !important
+}
+
+.bg-grey-darker {
+	background: #929ba1 !important
+}
+
+.bg-grey-lighter {
+	background: #c5ced4 !important
+}
+
+.bg-red {
+	background: #ff5b57 !important
+}
+
+.bg-red-darker {
+	background: #cc4946 !important
+}
+
+.bg-red-lighter {
+	background: #ff7c79 !important
+}
+
+.bg-orange {
+	background: #f59c1a !important
+}
+
+.bg-orange-darker {
+	background: #c47d15 !important
+}
+
+.bg-orange-lighter {
+	background: #f7b048 !important
+}
+
+.bg-yellow {
+	background: #e3fa3e !important
+}
+
+.bg-yellow-darker {
+	background: #b6c832 !important
+}
+
+.bg-yellow-lighter {
+	background: #e9fb65 !important
+}
+
+.bg-green {
+	background: #00acac !important
+}
+
+.bg-green-darker {
+	background: #008a8a !important
+}
+
+.bg-green-lighter {
+	background: #33bdbd !important
+}
+
+.bg-blue {
+	background: #348fe2 !important
+}
+
+.bg-blue-darker {
+	background: #2a72b5 !important
+}
+
+.bg-blue-lighter {
+	background: #5da5e8 !important
+}
+
+.bg-aqua {
+	background: #49b6d6 !important
+}
+
+.bg-aqua-darker {
+	background: #3a92ab !important
+}
+
+.bg-aqua-lighter {
+	background: #6dc5de !important
+}
+
+.bg-purple {
+	background: #926dde !important
+}
+
+.bg-purple-darker {
+	background: #5b6392 !important
+}
+
+.bg-purple-lighter {
+	background: #8e96c5 !important
+}
+
+.no-bg {
+	background: 0 0 !important
+}
+/* 小部件 */
+.widget {
+	border-radius: 3px;
+	margin-bottom: 20px;
+	color: #fff;
+	padding: 15px;
+	overflow: hidden
+}
+
+.widget.widget-stats {
+	position: relative
+}
+
+.widget-stats .stats-info h4 {
+	font-size: 12px;
+	margin: 5px 0;
+	color: #fff
+}
+
+.widget-stats .stats-icon {
+	font-size: 42px;
+	height: 56px;
+	width: 56px;
+	text-align: center;
+	line-height: 56px;
+	margin-left: 15px;
+	color: #fff;
+	position: absolute;
+	right: 15px;
+	top: 15px;
+	opacity: .2;
+	filter: alpha(opacity=20)
+}
+
+.widget-stats .stats-info p {
+	font-size: 24px;
+	font-weight: 300;
+	margin-bottom: 0
+}
+
+.widget-stats .stats-link a {
+	display: block;
+	margin: 15px -15px -15px;
+	padding: 7px 15px;
+	background: url(../img/transparent/black-0.4.png);
+	background: rgba(0, 0, 0, .4);
+	text-align: right;
+	color: #ddd;
+	font-weight: 300;
+	text-decoration: none
+}
+
+.widget-stats .stats-link a:focus,
+.widget-stats .stats-link a:hover {
+	background: url(../img/transparent/black-0.6.png);
+	background: rgba(0, 0, 0, .6);
+	color: #fff
+}
+
+.widget-stats .stats-icon.stats-icon-lg {
+	font-size: 52px;
+	top: 12px;
+	right: 21px
+}
+
+.widget-stats .stats-title {
+	position: relative;
+	line-height: 1.1;
+	font-size: 12px;
+	margin: 2px 0 7px
+}
+
+.widget-stats .stats-desc,
+.widget-stats .stats-title {
+	color: #fff;
+	color: rgba(255, 255, 255, .6)
+}
+
+.widget-stats .stats-desc {
+	font-weight: 300;
+	margin-bottom: 0
+}
+
+.widget-stats .stats-number {
+	font-size: 24px;
+	font-weight: 300;
+	margin-bottom: 10px
+}
+
+.widget-stats .stats-progress {
+	background: url(../img/transparent/black-0.2.png);
+	background: rgba(0, 0, 0, .2);
+	height: 2px;
+	margin: 0 -15px 12px
+}
+
+.widget-stats .stats-progress .progress-bar {
+	background: #fff
+}
+
+/* 媒体对象 */
+.media,
+.media-body {
+	overflow: hidden;
+	zoom: 1
+}
+
+.media .media-object {
+	width: 128px
+}
+
+.media.media-lg .media-object {
+	width: 256px
+}
+
+.media.media-sm .media-object {
+	width: 64px
+}
+
+.media.media-xs .media-object {
+	width: 32px
+}
+
+.media>.media-left,
+.media>.pull-left {
+	padding-right: 15px
+}
+
+.media>.media-right,
+.media>.pull-right {
+	padding-left: 15px
+}
+
+.media a:not(.btn).media-heading:focus,
+.media a:not(.btn).media-heading:hover,
+.media a:not(.btn):focus,
+.media a:not(.btn):focus .media-heading,
+.media a:not(.btn):hover,
+.media a:not(.btn):hover .media-heading {
+	color: #242a30;
+	text-decoration: none
+}
+
+.media-list.media-list-with-divider>li+li {
+	border-top: 1px solid #eee;
+	padding-top: 20px
+}
+
 /* 模态框 */
 .modal-header {
 	border-bottom-color: #f1f2f3;
@@ -1940,67 +2323,6 @@ input[type=radio] {
 	background: none
 }
 
-
-/*state overview*/
-.state-overview .card {
-	display: block;
-	margin-bottom: 20px;
-	border: none;
-}
-
-.state-overview .symbol,
-.state-overview .value {
-	display: inline-block;
-	text-align: center;
-}
-
-.state-overview .value {
-	float: right;
-}
-
-.state-overview .value h1,
-.state-overview .value p {
-	margin: 0;
-	padding: 0;
-	color: #c6cad6;
-}
-
-.state-overview .value h1 {
-	font-weight: 300;
-}
-
-.state-overview .symbol i {
-	color: #fff;
-	font-size: 50px;
-}
-
-.state-overview .symbol {
-	width: 40%;
-	padding: 25px 15px;
-	-webkit-border-radius: 4px 0px 0px 4px;
-	border-radius: 4px 0px 0px 4px;
-}
-
-.state-overview .value {
-	width: 58%;
-	padding-top: 21px;
-}
-
-.state-overview .terques {
-	background: #6ccac9;
-}
-
-.state-overview .red {
-	background: #ff6c60;
-}
-
-.state-overview .yellow {
-	background: #f8d347;
-}
-
-.state-overview .blue {
-	background: #57c8f2;
-}
 div.required>label::before {
     content: "* ";
     color: red;
@@ -2196,4 +2518,28 @@ div.required>label::before {
 		height: 160px;
 		overflow-y: scroll;
 	}
+}
+.clear-list .list-group-item {
+	border-left: 0;
+	border: 0;
+}
+.service-list .list-group-item {
+	border-left: 0;
+	border-right: 0;
+	padding: 10px 0;
+}
+.service-list .list-group-item:first-child {
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+	border-top: 0;
+}
+
+.service-list .list-group-item:last-child {
+	margin-bottom: 0;
+	border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px;
+	border-bottom: 0;
+}
+.service-list .list-group-item > .badge {
+    float: none;
 }
